FindBugsをかけてみました。
git-svn-id: https://www.seasar.org/svn/cubby/trunk@478 b6ec7606-942a-4144-8728-ba06ebfb7920