@@ -14,7 +14,8 @@ import org.seasar.extension.unit.S2TestCase;
  * @author agata
  */
 public class HttpRequestDxoTest extends S2TestCase {
-	private HttpRequestDxo httpRequestDxo;
+
+	public HttpRequestDxo httpRequestDxo;
 
 	@Override
 	protected void setUp() throws Exception {
@@ -55,7 +56,7 @@ public class HttpRequestDxoTest extends S2TestCase {
 		TestBean bean = new TestBean();
 
 		httpRequestDxo.convert(map, bean);
-		assertEquals(new Integer(1), bean.getNum1());
+		assertEquals(Integer.valueOf(1), bean.getNum1());
 	}
 
 	public void testMapToBean_MultiValue() {
@@ -66,8 +67,8 @@ public class HttpRequestDxoTest extends S2TestCase {
 
 		httpRequestDxo.convert(map, bean);
 		assertEquals(2, bean.getNum2().length);
-		assertEquals(new Integer(1), bean.getNum2()[0]);
-		assertEquals(new Integer(2), bean.getNum2()[1]);
+		assertEquals(Integer.valueOf(1), bean.getNum2()[0]);
+		assertEquals(Integer.valueOf(2), bean.getNum2()[1]);
 	}
 
 	public void testMapToBean_MultiValueIncludesEmptyValue () {
@@ -78,12 +79,12 @@ public class HttpRequestDxoTest extends S2TestCase {
 
 		httpRequestDxo.convert(map, bean);
 		assertEquals(3, bean.getNum2().length);
-		assertEquals(new Integer(1), bean.getNum2()[0]);
+		assertEquals(Integer.valueOf(1), bean.getNum2()[0]);
 		assertEquals(null, bean.getNum2()[1]);
-		assertEquals(new Integer(2), bean.getNum2()[2]);
+		assertEquals(Integer.valueOf(2), bean.getNum2()[2]);
 	}
 
-	public class TestBean {
+	public static class TestBean {
 
 		Date date;
 
@@ -94,11 +95,11 @@ public class HttpRequestDxoTest extends S2TestCase {
 		List<String> num3;
 
 		public Date getDate() {
-			return date;
+			return new Date(date.getTime());
 		}
 
 		public void setDate(Date date) {
-			this.date = date;
+			this.date = new Date(date.getTime());
 		}
 
 		public Integer getNum1() {
@@ -110,11 +111,11 @@ public class HttpRequestDxoTest extends S2TestCase {
 		}
 
 		public Integer[] getNum2() {
-			return num2;
+			return num2 == null ? null : num2.clone();
 		}
 
 		public void setNum2(Integer[] num2) {
-			this.num2 = num2;
+			this.num2 = num2 == null ? null : num2.clone();
 		}
 
 		public List<String> getNum3() {
